--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "main": "aviramMET.js",
     "scripts": {
-        "start": "aviramMET.js"
+        "start": "node ./bin/www"
     },
     "engines": {
         "node": "0.12.6"
